11단계, 12단계 적용 (TDD JUNIT적용, Controller-Service-Repository구조)